# curly-eureka

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  diesel.toml
.github/workflows/: test.yaml
migrations/2026-01-08-172445-0000_create_schema/: down.sql  up.sql
migrations/2026-01-08-185520-0000_create_tables/: down.sql  up.sql
resources/: Renewable_2025.csv
src/: db.rs  file_reader.rs  lib.rs  logger.rs  main.rs  model.rs  route.rs  schema.rs  shutdown.rs
src/model/: api_request.rs  api_response.rs  csv.rs  database.rs  mod.rs
