[package]
name = "renewable_ts_axum"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["http2", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.5", features = ["sqlite", "chrono", "numeric", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full", "macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
